# Tokeneyes

./: .gitignore  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.md  SCOPE.md  SDK_SETUP_GUIDE.md  SDK_TRACKING_OPTIONS.md  pyproject.toml  requirements.txt  test_auto_tracking.py  test_import_order.py  test_parsers.py  test_sdk_wrappers_unit.py
.claude/: settings.local.json
design/: AI_MODEL_COVERAGE.md  DESIGN_COMPLETE.md  DESIGN_REVIEW.md  PRODUCT_DESIGN.md  README.md  TECHNICAL_DESIGN.md  UI_DESIGN_SYSTEM.md
examples/: example_anthropic.py  example_auto_track.py  example_openai.py  test_sdk_wrappers.py
src/scanner/: daemon.py
src/scanner/parsers/: __init__.py  base.py  claude.py  cohere.py  deepseek.py  gemini.py  llama.py  mistral.py  openai.py
src/tokeneyes/: __init__.py  cli.py  config.py  daemon.py  discovery.py
src/tokeneyes/parsers/: copilot.py  grok.py  minimax.py
src/tokeneyes/sdk/: README.md  __init__.py  anthropic_wrapper.py  autopatch.py  base.py  openai_wrapper.py
src/tokeneyes/storage/: cursor_store.py  event_queue.py
